Update css, image sizes, reviews

--- a/public/views/services.html
+++ b/public/views/services.html
@@ -96,48 +96,7 @@
 </section> -->
 <section id="work-section" class="work-section">
   <div class="container mobile-layout">
-    <div class="row">
-      <div class="col-sm-2>">
-      </div>
-      <div class="col-sm-8 mobile-tile odd">
-        <div class="col-sm-12">
-          <img class="img-responsive" src="img/stocks/tvmount_install.jpg" alt="Strong Tower Installations">
-        </div>
-        <div class="col-sm-12">
-          <h1>TV Installation</h1>
-          <p>We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…
-          </p>
-          <ul>
-            <li>Our TV Installation will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
-          </ul>
-          <div class="clearfix">
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-2>">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-2>">
-      </div>
-      <div class="col-sm-8 mobile-tile">
-        <div class="col-sm-12">
-          <img class="img-responsive" src="img/stocks/hometheater_2.jpg" alt="Strong Tower Installations">
-        </div>
-        <div class="col-sm-12">
-          <h1>Media Rooms & Surround Sound Systems</h1>
-          <p>There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.</p>
-          <ul>
-            <li>Our Media Rooms & Surround Sound Systems will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
-          </ul>
-          <div class="clearfix">
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-2>">
-      </div>
-    </div>
-    <div class="row">
+    <div class="row" id="security-mobile">
       <div class="col-sm-2>">
       </div>
       <div class="col-sm-8 mobile-tile odd">
@@ -145,11 +104,9 @@
           <img class="img-responsive" src="img/stocks/security_monitoring_app.jpg" alt="Strong Tower Installations">
         </div>
         <div class="col-sm-12">
-          <h1>Home security</h1>
-          <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.</p>
-          <ul>
-            <li>Our Home security will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
-          </ul>
+          <h1>Security Systems</h1>
+          <p>Whether it be for your home, business, rental, or personal relative, we can customize the best form of security to get you the peace of mind you are looking for.  We install reliable, user-friendly equipment and are well versed in both wired and wireless systems. Over 10 years and counting, we have installed numerous systems and guarantee our work with 24/7 technical support; Your security is our top priority.
+          </p>
           <div class="clearfix">
           </div>
         </div>
@@ -157,7 +114,7 @@
       <div class="col-sm-2>">
       </div>
     </div>
-    <div class="row">
+    <div class="row" id="cameras-mobile">
       <div class="col-sm-2>">
       </div>
       <div class="col-sm-8 mobile-tile">
@@ -166,10 +123,8 @@
         </div>
         <div class="col-sm-12">
           <h1>Cameras & Surveillance</h1>
-          <p>The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.</p>
-          <ul>
-            <li>Our Cameras & Surveillance will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
-          </ul>
+          <p>Innovation in the security camera industry has put a high quality picture in an affordable reach to everyone.  From a single camera to watch over your front porch to full perimeter and interior coverage, we will find the perfect balance for your home or business.
+          </p>
           <div class="clearfix">
           </div>
         </div>
@@ -177,7 +132,43 @@
       <div class="col-sm-2>">
       </div>
     </div>
-    <div class="row">
+    <div class="row" id="media-mobile">
+        <div class="col-sm-2>">
+        </div>
+        <div class="col-sm-8 mobile-tile">
+          <div class="col-sm-12">
+            <img class="img-responsive" src="img/stocks/hometheater_2.jpg" alt="Strong Tower Installations">
+          </div>
+          <div class="col-sm-12">
+            <h1>Media Rooms & Surround Sound Systems</h1>
+            <p>This has become our most favorite work!  Using top notch equipment at a surprisingly affordable price, we love the “Wow!” our customers say after hearing their new system for the first time.  We install Surround Sound, multi-zone systems that not only consolidate all your devices, they also easily stream music from your phone or tablet.
+            </p>
+            <div class="clearfix">
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2>">
+        </div>
+      </div>
+    <div class="row" id="tvinstall-mobile">
+      <div class="col-sm-2>">
+      </div>
+      <div class="col-sm-8 mobile-tile odd">
+        <div class="col-sm-12">
+          <img class="img-responsive" src="img/stocks/tvmount_install.jpg" alt="Strong Tower Installations">
+        </div>
+        <div class="col-sm-12">
+          <h1>TV Installation</h1>
+          <p>We do it all: Wall-mount flat panel televisions, install soundbars, conceal wires inside the wall, set up and calibrate televisions with sound systems and even program universal remotes.  No need to worry, we take extra precautions when working with or around your prized television.  
+          </p>
+          <div class="clearfix">
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-2>">
+      </div>
+    </div>
+    <div class="row" id="wifi-mobile">
       <div class="col-sm-2>">
       </div>
       <div class="col-sm-8 mobile-tile odd">
@@ -186,12 +177,8 @@
         </div>
         <div class="col-sm-12">
           <h1>Wifi Solutions</h1>
-          <p>Relying on a single router is like asking a loud speaker in your living room to provide great sound throughout your home. It’s simple physics: WiFi waves don’t go through walls well and have an even harder time climbing stairs. Ever tried to stream a show from your bedroom when your router’s in the office downstairs? It’s a buffering nightmare.
+          <p>We are in a time where there’s nothing worse than trying to watch your favorite show or movie only to interrupted by it “buffering” every few minutes.  We are well aware of the headaches that troublesome wifi can cause and because of this, we have made it a priority to use the newest and most reliable products available.  Whether it is relocating the router by running hard lines to a more centralized location or installing a mesh network, we will find the solution that the cable guys aren’t willing to do
           </p>
-          <ul>
-            <li>Our Wifi Solutions will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.
-            </li>
-          </ul>
           <div class="clearfix">
           </div>
         </div>
@@ -199,7 +186,7 @@
       <div class="col-sm-2>">
       </div>
     </div>
-      <div class="row">
+      <div class="row" id="automation-mobile">
         <div class="col-sm-2>">
         </div>
         <div class="col-sm-8 mobile-tile">
@@ -208,12 +195,8 @@
           </div>
           <div class="col-sm-12">
             <h1>Home Automation</h1>
-            <p>The term home automation means exactly that—automating the home and related household activities. This term encompasses a whole range of products and services ranging from the automation of lights in your home to the installation of a state-of-the art security system.The term home automation means exactly that—automating the home and related household activities. This term encompasses a whole range of products and services ranging from the automation of lights in your home to the installation of a state-of-the art security system.
+            <p>The term home automation means exactly that—automating the home and related household activities. This term encompasses a whole range of products and services, such as, the automation of lights, thermostats and video streaming doorbells.
             </p>
-            <ul>
-              <li>Our Home Automation will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.
-              </li>
-            </ul>
             <div class="clearfix">
             </div>
           </div>
@@ -224,44 +207,7 @@
     </div>
   </div>
 
-
   <div class="container desktop-layout">
-    <div class="row desktile" id="tvinstall">
-      <div class="col-sm-1">
-      </div>
-      <div class="col-sm-6">
-        <img class="img-responsive" src="img/stocks/tvmount_install.jpg" alt="Strong Tower Installations">
-      </div>
-      <div class="col-sm-4">
-        <h1>TV Installation</h1>
-        <p>We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…
-        </p>
-        <ul>
-          <li>Our TV Installation will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-1">
-      </div>
-    </div>
-    <div class="row desktile odd" id="media">
-      <div class="col-sm-1">
-      </div>
-      <div class="col-sm-4">
-        <h1>Media Rooms & Surround Sound Systems</h1>
-        <p>There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.
-        </p>
-        <ul>
-          <li>Our Media Rooms & Surround Sound Systems will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-6">
-        <img class="img-responsive" src="img/stocks/hometheater_2.jpg" alt="Strong Tower Installations">
-      </div>
-      <div class="col-sm-1">
-      </div>
-    </div>
     <div class="row desktile" id="security">
       <div class="col-sm-1">
       </div>
@@ -269,13 +215,9 @@
         <img class="img-responsive" src="img/stocks/security_monitoring_app.jpg" alt="Strong Tower Installations">
       </div>
       <div class="col-sm-4">
-        <h1>Home security</h1>
-        <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders. Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.
+        <h1>Security Systems</h1>
+        <p>Whether it be for your home, business, rental, or personal relative, we can customize the best form of security to get you the peace of mind you are looking for.  We install reliable, user-friendly equipment and are well versed in both wired and wireless systems. Over 10 years and counting, we have installed numerous systems and guarantee our work with 24/7 technical support; Your security is our top priority.
         </p>
-        <ul>
-          <li>Our Home security will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.
-          </li>
-        </ul>
       </div>
       <div class="col-sm-1">
       </div>
@@ -285,15 +227,39 @@
       </div>
       <div class="col-sm-4">
         <h1>Cameras & Surveillance</h1>
-        <p>The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.
+        <p>Innovation in the security camera industry has put a high quality picture in an affordable reach to everyone.  From a single camera to watch over your front porch to full perimeter and interior coverage, we will find the perfect balance for your home or business.
         </p>
-        <ul>
-          <li>Our Cameras & Surveillance will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.
-          </li>
-        </ul>
       </div>
       <div class="col-sm-6">
         <img class="img-responsive" src="img/stocks/cameras_sensors.jpg" alt="Strong Tower Installations">
+      </div>
+      <div class="col-sm-1">
+      </div>
+    </div>
+    <div class="row desktile odd" id="media">
+      <div class="col-sm-1">
+      </div>
+      <div class="col-sm-4">
+        <h1>Media Rooms & Surround Sound Systems</h1>
+        <p>This has become our most favorite work!  Using top notch equipment at a surprisingly affordable price, we love the “Wow!” our customers say after hearing their new system for the first time.  We install Surround Sound, multi-zone systems that not only consolidate all your devices, they also easily stream music from your phone or tablet.
+        </p>
+      </div>
+      <div class="col-sm-6">
+        <img class="img-responsive" src="img/stocks/hometheater_2.jpg" alt="Strong Tower Installations">
+      </div>
+      <div class="col-sm-1">
+      </div>
+    </div>
+    <div class="row desktile" id="tvinstall">
+      <div class="col-sm-1">
+      </div>
+      <div class="col-sm-6">
+        <img class="img-responsive" src="img/stocks/tvmount_install.jpg" alt="Strong Tower Installations">
+      </div>
+      <div class="col-sm-4">
+        <h1>TV Installation</h1>
+        <p>We do it all: Wall-mount flat panel televisions, install soundbars, conceal wires inside the wall, set up and calibrate televisions with sound systems and even program universal remotes.  No need to worry, we take extra precautions when working with or around your prized television.  
+        </p>
       </div>
       <div class="col-sm-1">
       </div>
@@ -306,12 +272,8 @@
       </div>
       <div class="col-sm-4">
         <h1>Wifi Solutions</h1>
-        <p>Relying on a single router is like asking a loud speaker in your living room to provide great sound throughout your home. It’s simple physics: WiFi waves don’t go through walls well and have an even harder time climbing stairs. Ever tried to stream a show from your bedroom when your router’s in the office downstairs? It’s a buffering nightmare.
+        <p>We are in a time where there’s nothing worse than trying to watch your favorite show or movie only to interrupted by it “buffering” every few minutes.  We are well aware of the headaches that troublesome wifi can cause and because of this, we have made it a priority to use the newest and most reliable products available.  Whether it is relocating the router by running hard lines to a more centralized location or installing a mesh network, we will find the solution that the cable guys aren’t willing to do
         </p>
-        <ul>
-          <li>Our Wifi Solutions will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.
-          </li>
-        </ul>
       </div>
       <div class="col-sm-1">
       </div>
@@ -321,12 +283,8 @@
       </div>
       <div class="col-sm-4">
         <h1>Home Automation</h1>
-        <p>The term home automation means exactly that—automating the home and related household activities. This term encompasses a whole range of products and services ranging from the automation of lights in your home to the installation of a state-of-the art security system.The term home automation means exactly that—automating the home and related household activities. This term encompasses a whole range of products and services ranging from the automation of lights in your home to the installation of a state-of-the art security system.
+        <p>The term home automation means exactly that—automating the home and related household activities. This term encompasses a whole range of products and services, such as, the automation of lights, thermostats and video streaming doorbells.
         </p>
-        <ul>
-          <li>Our Home Automation will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.
-          </li>
-        </ul>
       </div>
       <div class="col-sm-6">
         <img class="img-responsive" src="img/stocks/home_automation_app_2.jpg" alt="Strong Tower Installations">
