--- a/public/views/testimonials.html
+++ b/public/views/testimonials.html
@@ -14,7 +14,7 @@
     <div class="row">
       <h1 class="section-title-grey">TESTIMONIALS</h1>
       <hr class="section-hr-grey">
-      <div class="review1">
+      <div class="review">
         <div class="widget ng-scope" id="tt-review-widget-one">
           <img ng-src="https://static.thumbtackstatic.com/media/logos/thumbtack/wordmark.svg" alt="Thumbtack" src="https://static.thumbtackstatic.com/media/logos/thumbtack/wordmark.svg">
           <div id="tt-dynamic">
@@ -42,7 +42,17 @@
         </div>
         <script src='https://www.thumbtack.com/profile/widgets/scripts/?service_id=VdWDwQ9cRc4Uaw&widget_id=review&type=one'></script>
       </div>
+      <div class="review">
+        <div class="fb-review">
+          <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fkathy.sheillynch%2Fposts%2F10154978385713075%3A0&width=600&show_text=true&appId=902009893274771&height=369" width="600" height="369" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        </div>
       </div>
+      <div class="review">
+        <div class="fb-review">
+          <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fbrandon.ray.12382%2Fposts%2F386325201753948%3A0&width=600&show_text=false&appId=902009893274771&height=350" width="600" height="350" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        </div>
+      </div>
+    </div>
     <div class="row">
 
     </div>
