--- a/public/styles/views/main.scss
+++ b/public/styles/views/main.scss
@@ -49,6 +49,7 @@ hr {
 .row {
   margin-left: -5px;
   margin-right: -5px;
+  padding: 0 5px;
 }
 
 .hide {
@@ -60,7 +61,7 @@ hr {
 .contact-bar {
   background: black;
   width: 100%;
-  height: 38px;
+  height: 40px;
   padding-top: 8px;
   padding-right: 25px;
   font-size: 18px;
@@ -120,7 +121,7 @@ hr {
   display: inline-block;
   cursor: pointer;
   margin: 0 12px;
-  padding-bottom: 5px;
+  padding-bottom: 2px;
   color: #7f7f7f;
   font-size: 15px;
   -webkit-transition: .25s;
@@ -185,12 +186,78 @@ hr {
   box-shadow: 0 5px 15px 0 rgba(0,0,0,.3);
 }
 
+.navbar-mobile {
+  display: block;
+  padding-right: 15px;
+  padding-left: 15px;
+  overflow-x: visible;
+  -webkit-overflow-scrolling: touch;
+  border-top: 1px solid transparent;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
+  background: #a7090a;
+  background: -ms-linear-gradient(45deg, #a7090a 0%, #C40A10 100%);
+  background: linear-gradient(45deg, #a7090a 0%, #C40A10 100%);
+  box-shadow: 0 3px 30px 5px rgba(0,0,0,0.15);
+  max-height: none;
+}
+
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition-timing-function: ease;
+  -o-transition-timing-function: ease;
+  transition-timing-function: ease;
+  -webkit-transition-duration: .35s;
+  -o-transition-duration: .35s;
+  transition-duration: .35s;
+  -webkit-transition-property: height, visibility;
+  transition-property: height, visibility;
+  -o-transition-property: height, visibility;
+}
+
+.collapsed {
+  display: none;
+}
+
+.expanded {
+ display: block;
+ overflow-y: auto;  
+}
+
+.navbar-mobile-nav {
+  margin: 30px -15px;
+  padding-left: 0;
+  margin-bottom: 10px;
+  list-style: none;
+}
+
+.navbar-mobile .navbar-mobile-nav>li {
+  transition: all 0s ease-in-out;
+  margin: 0;
+  padding: 14px 15px;
+  position: relative;
+  display: block;
+  text-align: center;
+}
+
+.navbar-mobile .navbar-mobile-nav>li a {
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 2px;
+  color: #fff;
+  margin: 0;
+  padding: 10px;
+}
 
 //ui wrapper
 .main-wrapper {
   // max-width: 1200px;
   // margin: 0 auto;
-  margin-top: 10px;
+  // margin-top: 10px;
   // z-index: -1;
   // position: relative;
 }
@@ -257,8 +324,19 @@ hr {
 .hero-filter {
   height: 100%;
   width: 100%;
-  background: #000;
-  opacity: 0.6;
+  background-color: rgba(0,0,0,0.6);
+}
+
+.hero-text-box {
+  font-size: 25px;
+  padding-left: 12%;
+  margin-top: 12%;
+  line-height: 1.3em;
+  color: #ffffff;
+  z-index: 10;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
 }
 
 .hero, .hero .container {
@@ -284,7 +362,7 @@ hr {
     font-size: 60px;
     font-weight: 300;
     line-height: 82px;
-    color: #FFF;
+    color: rgba(255,255,255,1);  
     position: relative;
     z-index: 1;
     display: block;
@@ -457,14 +535,6 @@ hr {
   font-size: 60px;
 }
 
-.services-pack h3 {
-  font-weight: 800;
-  line-height: 35px;
-  color: #4A4A4A;
-  font-size: 22px;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
 
 .services-pack  p {
   width: 80%;
@@ -474,9 +544,34 @@ hr {
   color: #797979;
 }
 
+.services-pack h3 {
+  font-weight: 800;
+  line-height: 35px;
+  color: #4A4A4A;
+  font-size: 22px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  p {
+    font-weight: 800;
+    line-height: 35px;
+    color: #4A4A4A;
+    font-size: 22px;
+  }
+}
 
 .services-pack .service-title {
   margin: 15px 0;
+  height: 220px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.services-pack .service-title:hover {
+  box-shadow: 0 3px 30px 5px rgba(0, 0, 0, 0.15);
+  -webkit-transition:all linear 0.2s;
+  transition:all linear 0.2s;
+  cursor: pointer;
 }
 
 .showroom {
@@ -490,22 +585,47 @@ hr {
 .plugin-container {
   display: flex;
   justify-content: center;
-  background: #dbd7d4;
+  background: #fff;
   background-image: url("../img/cross-red-black-outline.png");
   background-repeat: no-repeat;
-background-size: contain;
-
-    justify-content: center;
-
-
+  background-size: contain;
 }
 
 .fbplugin {
-  margin: 10px 0;
-  // border: solid 20px #a7090a;
+  position: relative;
+  margin: 10px;
+  margin-bottom: 30px;
   box-shadow: 0 3px 30px 5px rgba(0, 0, 0, 0.15);
+  width: 100%;
+  height: 100%;
+  max-height: 480px;
+  max-width: 500px;
+}
 
+.jump-to-ourpartners-btn.btn-circle {
+  position: fixed;
+  background: #ffffff;
+  right: 16px;
+  bottom: 20px;
+  margin-left: -24px;
+  box-shadow: 0 3px 12px 7px rgba(0, 0, 0, .2);
+  padding: 9px;
+  font-size: 25px;
+  width: 48px;
+  height: 48px;
+  z-index: 9999;
+  -webkit-transition:all linear 0.2s;
+  transition:all linear 0.2s;
+  opacity:1;
+  
 
+  & i {
+    color: black;
+  }
+}
+
+.jump-to-ourpartners-btn.btn-circle.ng-hide {
+  opacity:0;
 }
 
 .our-partners {
@@ -622,11 +742,21 @@ background-size: contain;
     margin-top: 30px;
 }
 // testimonials
-.review1 {
+.review {
+  margin: 10px 10px 50px;
   display: flex;
-justify-content: center;
-
+  justify-content: center;
 }
+
+.fb-review {    
+  -webkit-box-shadow: 0 0 10px -3px #888;
+  box-shadow: 0 0 10px -3px #888;
+
+  iframe {
+    max-width: 100%;
+  }
+}
+
 .mobile-tile {
     clear: both;
     float: left;
@@ -635,7 +765,7 @@ justify-content: center;
     background-color: #fff;
     border-bottom: 1px solid #dedede;
     display: block;
-    cursor: pointer;
+    // cursor: pointer;
     position: relative;
 }
 // about us
@@ -654,6 +784,16 @@ justify-content: center;
     text-align: left;
     line-height: 32px;
 }
+
+.our-team img {
+  width: auto;
+  height: auto;
+  max-height: 475px;
+  margin: 0 auto;
+  display: block;
+  max-width: 100%;
+}
+
 @media only screen and (min-width: 768px) {
   .quote p {
     font-size: 23px;
@@ -930,8 +1070,8 @@ footer .container {
   }
   .contact-bar {
     width: 100%;
-    height: 30px;
-    padding-top: 6px;
+    height: 40px;
+    padding-top: 10px;
   }
   .main-wrapper {
     margin-top: 90px;
@@ -942,6 +1082,7 @@ footer .container {
 }
 .footer-social {
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 
@@ -972,6 +1113,10 @@ footer .container {
 }
 
 @media only screen and (min-width: 768px) {
+  .hero-text-box {
+    font-size: 46px;
+  }
+
   .footer-social .footerlinks {
     max-width: 400px;
     display: inline-block;
@@ -1007,6 +1152,10 @@ footer .container {
 }
 
 @media only screen and (min-width: 992px) {
+  .hero-text-box {
+    font-size: 54px;
+  }
+
   .footer-social .footerlinks {
     max-width: 800px;
   }
@@ -1024,6 +1173,10 @@ footer .container {
 }
 
 @media only screen and (min-width: 1200px) {
+  .hero-text-box {
+    font-size: 60px;
+  }
+
   .container {
       width: 1200px;
       padding: 0;
