--- a/public/views/about.html
+++ b/public/views/about.html
@@ -33,8 +33,8 @@
       <h1 class="section-title-grey">OUR TEAM</h1>
       <hr class="section-hr-grey">
       <div class="col-sm-1"></div>
-      <div class="col-sm-10">
-        <img src="../img/strongtower_aboutus.jpg" alt="" style='height: 475px;margin: 0 auto;display: block;'>
+      <div class="col-sm-10 our-team">
+        <img src="../img/strongtower_aboutus.jpg" alt="">
       </div>
     </div>
   </div>
