--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,3 +1,8 @@
+<div class="hero-text-box">
+  <p>Welcome to</p>
+  <p>StrongTower Installations</p>
+</div>
+
 <ng-owl-carousel id='main-carousel' class="owl-theme" owl-items="owlitems" owl-properties="owlproperties">
   <div class="item">
     <img src="img/stocks/relaxingguy.jpg" alt="Strong Tower Installations">
@@ -33,49 +38,51 @@
       <hr class="section-hr-grey">
       <div class="col-sm-1"></div>
       <div class="col-sm-10 services-pack">
-        <h2>Our Services will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</h2>
-        <div class="row">
-          <div class="col-md-6 service-title">
-            <i class="fa fa-television techicon" aria-hidden="true"></i>
-            <h3>TV Installation</h3>
-            <p>We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…</p>
-            <button ui-sref="services({scrollTo: 'tvinstall'})">LEARN MORE</button>
-          </div>
-          <div class="col-md-6 service-title">
-            <i class="fa fa-music techicon" aria-hidden="true"></i>
-            <h3>Media Rooms & Surround Sound Systems</h3>
-            <p>There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.</p>
-            <button ui-sref="services({scrollTo: 'media'})">LEARN MORE</button>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 service-title">
+        <h2>Whether you are renting, buying or building a home in Arizona, we can help!
+          From troubleshooting and salvaging old systems to bringing a new dream to reality, our crew specializes in solving the puzzle in the most respectful and cost-efficient way.
+         We do what’s right for each customer, every time.</h2>
+         <div class="row">
+          <div ui-sref="services({scrollTo: !rootScope.isSmallViewPort ? 'security' : 'security-moble'})" class="col-md-6 service-title">
             <i class="fa fa-shield techicon" aria-hidden="true"></i>
             <h3>Security Systems</h3>
-            <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.</p>
-            <button ui-sref="services({scrollTo: 'security'})">LEARN MORE</button>
+            <!-- <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.</p> -->
+            <!-- <button ui-sref="services({scrollTo: 'security'})">LEARN MORE</button> -->
           </div>
-          <div class="col-md-6 service-title">
+          <div ui-sref="services({scrollTo: !rootScope.isSmallViewPort ? 'cameras' : 'cameras-moble'})" class="col-md-6 service-title">
             <i class="fa fa-video-camera techicon" aria-hidden="true"></i>
             <h3>Cameras & Surveillance</h3>
-            <p>The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.</p>
-            <button ui-sref="services({scrollTo: 'cameras'})">LEARN MORE</button>
+            <!-- <p>The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.</p> -->
+            <!-- <button ui-sref="services({scrollTo: 'cameras'})">LEARN MORE</button> -->
           </div>
         </div>
-        <div class="col-md-6 service-title">
-          <i class="fa fa-wifi techicon" aria-hidden="true"></i>
-          <h3>Wifi Solutions</h3>
-          <p>Relying on a single router is like asking a loud speaker in your living room to provide great sound throughout your home. It’s simple physics: WiFi waves don’t go through walls well and have an even harder time climbing stairs. Ever tried to stream a show from your bedroom when your router’s in the office downstairs? It’s a buffering nightmare.</p>
-          <button ui-sref="services({scrollTo: 'wifi'})">LEARN MORE</button>
+         <div class="row">
+           <div ui-sref="services({scrollTo: !rootScope.isSmallViewPort ? 'media' : 'media-moble'})" class="col-md-6 service-title">
+             <i class="fa fa-music techicon" aria-hidden="true"></i>
+             <h3><p>Media Rooms &</p><p>Surround Sound Systems</p></h3>
+             <!-- <p>There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.</p> -->
+             <!-- <button ui-sref="services({scrollTo: 'media'})">LEARN MORE</button> -->
+           </div>
+          <div ui-sref="services({scrollTo: !rootScope.isSmallViewPort ? 'tvinstall' : 'tvinstall-moble'})" class="col-md-6 service-title">
+            <i class="fa fa-television techicon" aria-hidden="true"></i>
+            <h3>TV Installation</h3>
+            <!-- <p>We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…</p> -->
+            <!-- <button ui-sref="services({scrollTo: 'tvinstall'})">LEARN MORE</button> -->
+          </div>
         </div>
-        <div class="col-md-6 service-title">
-          <i class="fa fa-magic techicon" aria-hidden="true"></i>
-          <h3>Home Automation</h3>
-          <p>The term home automation means exactly that—automating the home and related household activities. This term encompasses a whole range of products and services ranging from the automation of lights in your home to the installation of a state-of-the art security system.
-          </p>
-          <button ui-sref="services({scrollTo: 'automation'})">LEARN MORE</button>
+        <div class="row">
+          <div ui-sref="services({scrollTo: !rootScope.isSmallViewPort ? 'wifi' : 'wifi-moble'})" class="col-md-6 service-title">
+            <i class="fa fa-wifi techicon" aria-hidden="true"></i>
+            <h3>Wifi Solutions</h3>
+            <!-- <p>Relying on a single router is like asking a loud speaker in your living room to provide great sound throughout your home. It’s simple physics: WiFi waves don’t go through walls well and have an even harder time climbing stairs. Ever tried to stream a show from your bedroom when your router’s in the office downstairs? It’s a buffering nightmare.</p> -->
+            <!-- <button ui-sref="services({scrollTo: 'wifi'})">LEARN MORE</button> -->
+          </div>
+          <div ui-sref="services({scrollTo: !rootScope.isSmallViewPort ? 'automation' : 'automation-moble'})" class="col-md-6 service-title">
+            <i class="fa fa-magic techicon" aria-hidden="true"></i>
+            <h3>Home Automation</h3>
+            <!-- <p>The term home automation means exactly that—automating the home and related household activities. This term encompasses a whole range of products and services ranging from the automation of lights in your home to the installation of a state-of-the art security system. -->
+            <!-- <button ui-sref="services({scrollTo: 'automation'})">LEARN MORE</button> -->
+          </div>
         </div>
-      </div>
       </div>
     </div>
   </div>
@@ -91,15 +98,13 @@
       <div class="col-sm-1"></div>
       <div class="col-sm-10 services-pack plugin-container">
         <div class="fbplugin">
-          <!-- <div class="fb-page" data-href="https://www.facebook.com/strongtowerinstallations/" data-tabs="timeline" data-height="600" data-width="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/strongtowerinstallations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/strongtowerinstallations/">Strong Tower Installations</a></blockquote></div> -->
-          <div ng-if="pluginOn" onrender="rendered()" class="fb-page" data-href="https://www.facebook.com/strongtowerinstallations/" data-width="500" data-adapt-container-width="false" data-height="600" data-tabs="timeline" data-hide-cover="false" data-small-header="true" data-show-facepile="false" data-show-posts="true"></div>
-
+          <div ng-if="pluginOn" onrender="rendered()" class="fb-page" data-href="https://www.facebook.com/strongtowerinstallations/" data-tabs="timeline" data-small-header="true" data-width="600" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/strongtowerinstallations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/strongtowerinstallations/">Strong Tower Installations</a></blockquote></div>
         </div>
       </div>
     </div>
   </div>
 </section>
-<section class="our-partners">
+<section id="ourpartners" class="our-partners">
   <div class="container">
     <div class="row">
       <h2 class="section-title-grey">OUR PARTNERS</h2>
